# arxiv-feishu-bot

./: .gitignore  AGENTS.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: arxiv-daily-paper-push.yml  test.yml
.trae/documents/: cli_refactor_plan.md  delimiter_and_model_plan.md  dynamic_card_and_zero_papers_plan.md  expression_parser_plan.md  fix_cli_usage_docs_plan.md  improve_availability_checks_plan.md  pixi_migration_finalization_plan.md  pixi_migration_plan.md  readme_logo_and_workflow_check_plan.md  readme_logo_and_workflow_plan.md  refactor_arxiv_feishu_bot.md  rename_arxiv_module_plan.md  type_hints_and_tests_plan.md  unify_defaults_plan.md  update_readme_for_cli_plan.md
lark_arxivbot/: __init__.py  arxiv.py  arxiv_fetcher.py  availability.py  card.py  cli.py  config.py  feishu.py  llm.py  logging_config.py  workflow.py
tests/: test_arxiv.py  test_availability.py  test_card.py  test_cli.py  test_config.py  test_feishu.py  test_llm.py  test_logging_config.py
