[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lark-arxivbot"
version = "0.1.0"
description = "Daily arXiv paper digest bot for Feishu (Lark) with LLM summarization."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "openai>=1.0.0",
    "arxiv>=2.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["lark_arxivbot*"]
