[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lark-arxivbot"
version = "0.1.0"
description = "Daily arXiv paper digest bot for Feishu (Lark) with LLM summarization."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "requests>=2.33.1,<3",
    "openai>=2.43.0,<3",
    "arxiv>=4.0.0,<5",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
]

[project.scripts]
lark-arxivbot = "lark_arxivbot.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["lark_arxivbot*"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
lark-arxivbot = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
test = { features = ["test"], solve-group = "default" }

[tool.pixi.dependencies]
python = "3.12.*"
